3.0 HLS demuxer format race with unknown formats
https://rt-france-gd.secure2.footprint.net/1107.m3u8
Here AAC demuxer is only created after 2nd segment download, and because the format is never updated it keeps demuxing TS.
[0000613000185700] adaptive demux debug: Updated playlist ID 1107_64Kb.m3u8, next update in 14s
[0000613000185700] adaptive demux debug: Representation 1107_64Kb.m3u8
[0000613000185700] adaptive demux debug: Segment [#1414371](https://code.videolan.org/videolan/vlc/-/issues/1414371) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414370.aac duration 200
[0000613000185700] adaptive demux debug: Segment [#1414372](https://code.videolan.org/videolan/vlc/-/issues/1414372) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414371.aac stime 200 duration 198
[0000613000185700] adaptive demux debug: Segment [#1414373](https://code.videolan.org/videolan/vlc/-/issues/1414373) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414372.aac stime 398 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414374](https://code.videolan.org/videolan/vlc/-/issues/1414374) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414373.aac stime 599 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414375](https://code.videolan.org/videolan/vlc/-/issues/1414375) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414374.aac stime 799 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414376](https://code.videolan.org/videolan/vlc/-/issues/1414376) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414375.aac stime 1000 duration 198
[0000613000185700] adaptive demux debug: Segment [#1414377](https://code.videolan.org/videolan/vlc/-/issues/1414377) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414376.aac stime 1198 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414378](https://code.videolan.org/videolan/vlc/-/issues/1414378) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414377.aac stime 1399 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414379](https://code.videolan.org/videolan/vlc/-/issues/1414379) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414378.aac stime 1599 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414380](https://code.videolan.org/videolan/vlc/-/issues/1414380) url=https://rt-france-gd.secure2.footprint.net/1107_64Kb_1414379.aac stime 1800 duration 198
format Unknown / Unknown
[0000614000087100] adaptive stream debug: Retrieving https://rt-france-gd.secure2.footprint.net:443/1107_64Kb_1414370.aac @0
[00006120001c0600] main tls client debug: looking for tls client module matching "any": 1 candidates
[00006120001c0600] gnutls tls client debug: using GnuTLS version 3.6.11
[00006120001c0600] gnutls tls client debug: loaded 150 trusted CAs from system
[00006120001c0600] main tls client debug: using tls client module "gnutls"
[00006120001c0600] main tls client debug: resolving rt-france-gd.secure2.footprint.net ...
[00006120001c0600] gnutls tls client debug: TLS handshake: Ressource temporairement indisponible. Réessayer.
[00006120001c0600] gnutls tls client debug: TLS handshake: Ressource temporairement indisponible. Réessayer.
[00006120001c0600] gnutls tls client debug: TLS handshake: Succès.
[00006120001c0600] gnutls tls client debug: - safe renegotiation (RFC5746) enabled
[00006120001c0600] gnutls tls client debug: - false start (RFC7918) enabled
REP 0x6120001b16c0 0x6120001b1cc0
SWITCHING -1 0
[0000613000185700] adaptive demux debug: Retrieving https://rt-france-gd.secure2.footprint.net:443/1107_2500Kb.m3u8 @0
[00006140000bb700] main stream debug: creating access: https://rt-france-gd.secure2.footprint.net:443/1107_2500Kb.m3u8
[00006140000bb700] main stream debug: looking for access module matching "https": 26 candidates
[0000612000000580] main tls client debug: looking for tls client module matching "any": 1 candidates
[0000612000000580] gnutls tls client debug: using GnuTLS version 3.6.11
[0000612000000580] gnutls tls client debug: loaded 150 trusted CAs from system
[0000612000000580] main tls client debug: using tls client module "gnutls"
[0000612000000580] main tls client debug: resolving rt-france-gd.secure2.footprint.net ...
[0000612000000580] gnutls tls client debug: TLS handshake: Ressource temporairement indisponible. Réessayer.
[0000612000000580] gnutls tls client debug: TLS handshake: Succès.
[0000612000000580] gnutls tls client debug: - safe renegotiation (RFC5746) enabled
[0000612000000580] gnutls tls client debug: - false start (RFC7918) enabled
[00006140000bb700] http stream debug: out SETTINGS (0x04) frame of 30 bytes, flags 0x00, global
[00006140000bb700] http stream debug: out HEADERS (0x01) frame of 190 bytes, flags 0x05, stream 1
[00006140000bb700] http stream debug: in SETTINGS (0x04) frame of 18 bytes, flags 0x00, global
[00006140000bb700] http stream debug: setting: Concurrent streams (0x0003): 128
[00006140000bb700] http stream debug: setting: Initial window size (0x0004): 65536
[00006140000bb700] http stream debug: setting: Frame size (0x0005): 16777215
[00006140000bb700] http stream debug: out SETTINGS (0x04) frame of 0 bytes, flags 0x01, global
[00006140000bb700] http stream debug: in WINDOW_UPDATE (0x08) frame of 4 bytes, flags 0x00, global
[00006140000bb700] http stream debug: in SETTINGS (0x04) frame of 0 bytes, flags 0x01, global
[00006140000bb700] http stream debug: in HEADERS (0x01) frame of 255 bytes, flags 0x04, stream 1
[00006140000bb700] http stream debug: stream 1 13 headers:
[00006140000bb700] http stream debug: :status: "206"
[00006140000bb700] http stream debug: date: "Mon, 17 Feb 2020 15:29:41 GMT"
[00006140000bb700] http stream debug: content-type: "application/vnd.apple.mpegurl"
[00006140000bb700] http stream debug: content-length: "479"
[00006140000bb700] http stream debug: cache-control: "max-age=1"
[00006140000bb700] http stream debug: etag: ""5e4ab165-1df""
[00006140000bb700] http stream debug: last-modified: "Mon, 17 Feb 2020 15:29:41 GMT"
[00006140000bb700] http stream debug: server: "nginx"
[00006140000bb700] http stream debug: expires: "Mon, 17 Feb 2020 15:29:42 GMT"
[00006140000bb700] http stream debug: access-control-allow-credentials: "true"
[00006140000bb700] http stream debug: access-control-allow-methods: "OPTIONS,GET"
[00006140000bb700] http stream debug: age: "0"
[00006140000bb700] http stream debug: content-range: "bytes 0-478/479"
[00006140000bb700] http stream debug: in DATA (0x00) frame of 479 bytes, flags 0x01, stream 1
[00006140000bb700] http stream debug: out (priority) WINDOW_UPDATE (0x08) frame of 4 bytes, flags 0x00, global
[00006140000bb700] main stream debug: using access module "access"
[00006140000bb700] http stream debug: stream 1 closed by peer
[0000614000009900] main stream debug: looking for stream_filter module matching "prefetch,cache_block": 27 candidates
[0000614000009900] prefetch stream debug: using 479 bytes buffer, 479 bytes read
[0000614000009900] main stream debug: using stream_filter module "prefetch"
[0000614000009700] main stream debug: looking for stream_filter module matching "any": 27 candidates
[0000614000009900] prefetch stream debug: end of stream
[0000614000009700] main stream debug: no stream_filter modules matched
[00006140000be300] main stream debug: looking for stream_filter module matching "inflate": 27 candidates
[00006140000be300] main stream debug: no stream_filter modules matched
[0000614000009900] main stream debug: removing module "prefetch"
[00006140000bb700] main stream debug: removing module "access"
[00006140000bb700] http stream debug: local stream 1 shut down
[00006140000bb700] http stream debug: out RST_STREAM (0x03) frame of 4 bytes, flags 0x00, stream 1
[00006140000bb700] http stream debug: local shutdown
[00006140000bb700] http stream debug: out GOAWAY (0x07) frame of 8 bytes, flags 0x00, global
[0000613000185700] adaptive demux debug: Updated playlist ID 1107_2500Kb.m3u8, next update in 15s
[0000613000185700] adaptive demux debug: Representation 1107_2500Kb.m3u8
[0000613000185700] adaptive demux debug: Segment [#1414372](https://code.videolan.org/videolan/vlc/-/issues/1414372) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414371.ts duration 200
[0000613000185700] adaptive demux debug: Segment [#1414373](https://code.videolan.org/videolan/vlc/-/issues/1414373) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414372.ts stime 200 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414374](https://code.videolan.org/videolan/vlc/-/issues/1414374) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414373.ts stime 400 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414375](https://code.videolan.org/videolan/vlc/-/issues/1414375) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414374.ts stime 600 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414376](https://code.videolan.org/videolan/vlc/-/issues/1414376) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414375.ts stime 800 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414377](https://code.videolan.org/videolan/vlc/-/issues/1414377) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414376.ts stime 1000 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414378](https://code.videolan.org/videolan/vlc/-/issues/1414378) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414377.ts stime 1200 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414379](https://code.videolan.org/videolan/vlc/-/issues/1414379) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414378.ts stime 1400 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414380](https://code.videolan.org/videolan/vlc/-/issues/1414380) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414379.ts stime 1600 duration 200
[0000613000185700] adaptive demux debug: Segment [#1414381](https://code.videolan.org/videolan/vlc/-/issues/1414381) url=https://rt-france-gd.secure2.footprint.net/1107_2500Kb_1414380.ts stime 1800 duration 200
format Unknown / Unknown
[0000613000185700] main demux debug: creating demux: access='' demux='aac' location='' file='(null)'
[0000613000009cc0] main demux debug: looking for demux module matching "aac": 54 candidates
[0000613000009cc0] es demux debug: detected format mp4a
[00006190009bab40] main demux packetizer debug: looking for packetizer module matching "any": 25 candidates
[0000614000087100] adaptive stream debug: Retrieving https://rt-france-gd.secure2.footprint.net:443/1107_2500Kb_1414371.ts @0
[00006120001c8e80] main tls client debug: looking for tls client module matching "any": 1 candidates
[00006120001c8e80] gnutls tls client debug: using GnuTLS version 3.6.11
[00006190009bab40] mpeg4audio demux packetizer debug: running MPEG4 audio packetizer
[00006190009bab40] main demux packetizer debug: using packetizer module "mpeg4audio"
[00006190009bab40] mpeg4audio demux packetizer debug: detected ADTS format
[00006190009bab40] mpeg4audio demux packetizer: AAC channels: 2 samplerate: 48000
[0000613000009cc0] main demux debug: using demux module "es"
[00006120001c8e80] gnutls tls client debug: loaded 150 trusted CAs from system
[00006120001c8e80] main tls client debug: using tls client module "gnutls"
[00006120001c8e80] main tls client debug: resolving rt-france-gd.secure2.footprint.net ...
[00006120001c8e80] gnutls tls client debug: TLS handshake: Ressource temporairement indisponible. Réessayer.
[00006120001c8e80] gnutls tls client debug: TLS handshake: Ressource temporairement indisponible. Réessayer.
[00006120001c8e80] gnutls tls client debug: TLS handshake: Succès.
[00006120001c8e80] gnutls tls client debug: - safe renegotiation (RFC5746) enabled
[00006120001c8e80] gnutls tls client debug: - false start (RFC7918) enabled