demux: adaptive: fix regression with unknown/probed formats

For HLS, format is now probed in demux when unknown, but it
can still change before the demuxer starts due to getMimeType
ref #24237